# PRISM

./: .env.backup  .env.example  .gitignore  .mcp.json  .mcp.json.notes.md  ACKNOWLEDGMENTS.md  AGENTS.md  API_ISSUE_FIXES_PROMPT.md  API_ISSUE_RESPONSES.md  BUILD_STATE.md  CHANGELOG.md  CLAUDE_SESSION_HANDOFF.md  CLI_DOCUMENTATION.md  CLI_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_SUMMARY.md  Cargo.toml  Copy_of_Qwen3_5_(4B)_Vision_GRPO.ipynb  Dockerfile  ENHANCED_CONNECTOR_SUMMARY.md  ENHANCED_JOB_SYSTEM_GUIDE.md  EXECUTABLE_SUCCESS.md  FEEDBACK.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION.md  INTEGRATION_TESTS_SUMMARY.md  JARVIS_CONNECTOR_SUMMARY.md  LICENSE  LICENSE-MARC27  LICENSE-MIT  LOGO_INTEGRATION_GUIDE.md  MARC27_CORE_FIXES_NEEDED.md  MARC27_SUPPORT_API_SPEC.md  Makefile  NOMAD_CONNECTOR_GUIDE.md  NOMAD_CONNECTOR_SUMMARY.md  NOTICE  PLAN_V2.6.md  PLATFORM_API_REFERENCE.md  (+52 more)
crates/agent/: Cargo.toml
crates/agent/src/: agent_loop.rs  capability.rs  command_tools.rs  commands.rs  embeddings.rs  hooks.rs  lib.rs  mcp.rs  meta_tools.rs  models.rs  node_supervisor.rs  notebook.rs  notebook_kernel.py  permissions.rs  prompt_profile.rs  prompts.rs  protocol.rs  provenance_sync.rs  scratchpad.rs  service.rs  session.rs  skills.rs  subagent.rs  system_prompt.rs  task.rs  tool_catalog.rs  tool_result.rs  transcript.rs  types.rs
crates/agent/tests/: http_chat_parity.rs  mcp_client.rs  subagent_nested_turn.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/campaign/: Cargo.toml
crates/campaign/src/: lib.rs
crates/campaign/tests/: goal_e2e.rs
crates/cli/: Cargo.toml
crates/cli/src/: boot.rs  boot_checks.rs  chat_config.rs  doctor.rs  forge_chat.rs  main.rs  mcp_server_native.rs  notebook.rs  onboarding.rs  platform_bridge.rs  pyiron_cmd.rs  tool_sync.rs  use_command.rs
crates/cli/src/tui/: backend_client.rs  markdown.rs  mod.rs  protocol.rs  state.rs
crates/client/: Cargo.toml
crates/client/src/: api.rs  auth.rs  billing.rs  knowledge.rs  lib.rs  marketplace.rs  node_registry.rs  node_session.rs
crates/compute/: Cargo.toml
crates/compute/src/: backend.rs  byoc.rs  job.rs  lib.rs  local.rs  marc27.rs
crates/core/: Cargo.toml
crates/core/src/: audit.rs  config.rs  execution.rs  lib.rs  rbac.rs  registry.rs  session.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs  native.rs  openai.rs
crates/embed/tests/: native_live.rs
crates/forge_tracker/: Cargo.toml
crates/forge_tracker/src/: dispatch.rs  event.rs  lib.rs  log.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: embeddings.rs  graph.rs  graph_validation.rs  lib.rs  llm.rs  local_facts.rs  mapping.rs  nl_query.rs  ontology.rs  pipeline.rs  schema.rs  text_extract.rs  validation.rs
crates/ingest/src/connectors/: csv.rs  mod.rs  parquet.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: bridge.rs  lib.rs  methods.rs  server.rs  surface.rs  types.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/examples/: cross_site_inference.rs
crates/mesh/src/: burst_routing.rs  federated_query.rs  federation.rs  federation_lookup.rs  kafka.rs  lib.rs  locality.rs  mdns.rs  node_systems.rs  platform_discovery.rs  protocol.rs  subscription.rs  sync.rs
crates/mesh/tests/: mesh_integration.rs
crates/node/: Cargo.toml
crates/node/src/: crypto.rs  daemon.rs  detect.rs  executor.rs  lib.rs  main.rs  state.rs
crates/orch/: Cargo.toml
crates/orch/src/: docker.rs  external.rs  health.rs  lib.rs  services.rs
crates/policy/: Cargo.toml
crates/policy/src/: default.rego  intersect.rs  lib.rs
crates/prism_tool_router/: Cargo.toml
crates/prism_tool_router/src/: config.rs  download.rs  error.rs  function.rs  index.rs  lib.rs  routing.rs  server.rs
crates/prism_tool_router/tests/: embed_smoke.rs  route_smoke.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/provenance/: Cargo.toml
crates/provenance/src/: emmo.rs  lib.rs
crates/python-bridge/: Cargo.toml
crates/python-bridge/src/: lib.rs  tool_server.rs  venv.rs
crates/python-bridge/tests/: stderr_drain.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: dashboard.html  lib.rs  router.rs  ws.rs
crates/server/src/handlers/: audit.rs  chat.rs  data.rs  deployments.rs  goals.rs  mesh.rs  mod.rs  node.rs  query.rs  sessions.rs  tools.rs  users.rs  workflows.rs
crates/server/src/middleware/: auth.rs  federation.rs  mod.rs  rbac.rs  resolve_role.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  backend.rs  command.rs  form.rs  gh.rs  keymap.rs  knowledge.rs  latex.rs  lib.rs  markdown.rs  msg.rs  notebook.rs  render.rs  sanitize.rs  theme.rs  toast.rs
crates/tui/tests/: render_snapshots.rs  unit.rs
crates/tui/tests/snapshots/: render_snapshots__account_logged_in_100x30.snap  render_snapshots__ansi_injection_sanitized_100x30.snap  render_snapshots__approval_after_a_100x30.snap  render_snapshots__approval_after_n_100x30.snap  render_snapshots__approval_after_y_100x30.snap  render_snapshots__approval_popup_with_tool_timeline_100x30.snap  render_snapshots__approval_required_popup_100x30.snap  render_snapshots__backend_warning_error_100x30.snap  render_snapshots__basic_chat_after_response_100x30.snap  render_snapshots__command_palette_filtered_100x30.snap  render_snapshots__command_palette_open_100x30.snap  render_snapshots__cost_metrics_100x30.snap  render_snapshots__cost_panel_toggled_100x30.snap  render_snapshots__empty_launch_100x30.snap  render_snapshots__form_pane_all_field_kinds_100x30.snap  render_snapshots__gh_panel_100x30.snap  render_snapshots__goal_form_typed_100x30.snap  render_snapshots__gpu_picker_100x30.snap  render_snapshots__home_launch_100x30.snap  render_snapshots__knowledge_ingest_browser_100x30.snap  render_snapshots__knowledge_search_tab_100x30.snap  render_snapshots__link_picker_confirm_100x30.snap  (+35 more)
crates/workflows/: Cargo.toml
crates/workflows/src/: lib.rs
crates/workflows/tests/: ingest_e2e.rs  llm_endpoint.rs  node_token_auth.rs
(+923 files in other folders)
