[workspace]
members = [
    "crates/cli",
    "crates/client",
    "crates/compute",
    "crates/core",
    "crates/forge",
    "crates/ingest",
    "crates/ipc",
    "crates/mesh",
    "crates/node",
    "crates/orch",
    "crates/policy",
    "crates/proto",
    "crates/python-bridge",
    "crates/runtime",
    "crates/server",
    "crates/workflows",
]
resolver = "2"

[workspace.package]
version = "2.5.0"
edition = "2021"
license = "LicenseRef-MARC27-Dual"
authors = ["MARC27 <team@marc27.com>"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5"
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = "0.32"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
async-trait = "0.1"
axum = "0.8"
bollard = "0.18"
polars = { version = "0.46", default-features = false, features = ["lazy", "csv", "parquet"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
mdns-sd = "0.11"
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["limit", "buffer"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = "8"
mime_guess = "2"
