[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.7.0"
rust-version = "1.92"
edition = "2024"
license = "LicenseRef-MARC27-Dual"
authors = ["MARC27 <team@marc27.com>"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# ─────────────────────────────────────────────────────────────────────
# Workspace dependencies
#
# Pinned versions follow ForgeCode upstream (Apache-2.0) where they
# overlap with PRISM. PRISM-exclusive deps preserved below.
# ─────────────────────────────────────────────────────────────────────
[workspace.dependencies]

# Core async / runtime
anyhow = "1.0.102"
async-recursion = "1.1.1"
async-stream = "0.3"
async-trait = "0.1.89"
backon = "1.5.2"
futures = "0.3.32"
futures-util = "0.3"
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Serialization
base64 = "0.22.1"
bstr = "1.12.1"
bytes = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
serde_yml = "0.0.12"
toml = "0.8"
toml_edit = { version = "0.25", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }

# CLI / TUI
clap = { version = "4.6.0", features = ["derive", "env"] }
clap_complete = "4.6.0"
colored = "3.1.1"
console = "0.16.3"
enable-ansi-support = "0.3.1"
nu-ansi-term = "0.50.1"
nucleo = "0.5.0"
reedline = "0.47.0"
rustyline = "18.0.0"
strip-ansi-escapes = "0.2.1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
termimad = "0.34.1"
terminal_size = "0.4"
unicode-width = "0.2"

# HTTP / TLS
http = "1.2.0"
hyper = "1"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "hickory-dns", "http2", "stream"], default-features = false }
rustls = { version = "0.23", features = ["ring"], default-features = false }
tiny_http = "0.12.0"

# AWS / Bedrock
aws-config = { version = "1.8.13", features = ["behavior-version-latest", "sso"], default-features = false }
aws-sdk-bedrockruntime = { version = "1.129.0", features = ["behavior-version-latest"], default-features = false }
aws-credential-types = "1.2.14"
aws-smithy-types = "1.4.3"
aws-smithy-runtime-api = "1.11.3"
aws-smithy-async = { version = "1.2.11", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.10", features = ["connector-hyper-0-14-x", "tls-rustls"] }

# Google
google-cloud-auth = "1.8.0"
tonic = { version = "0.14.5", features = ["tls-webpki-roots"] }

# Crypto
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8"
sha2 = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

# Date / time
chrono = { version = "0.4.44", features = ["serde"] }
humantime = "2.1.0"

# Errors / utilities
convert_case = "0.11.0"
dashmap = "7.0.0-rc2"
derive_more = { version = "2.1.1", features = ["from", "display", "debug", "deref", "as_ref", "try_into"] }
derive_setters = "0.1.9"
dirs = "6.0.0"
directories = "5"
dissimilar = "1.0.9"
dotenvy = "0.15.7"
fnv_rs = "0.4.3"
fzf-wrapped = "0.1.4"
gh-workflow = "0.8.1"
glob = "0.3.3"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
gray_matter = "0.3.2"
gix = "0.83"
handlebars = "6.4.0"
html2md = "0.2.15"
ignore = "0.4.23"
include_dir = "0.7.4"
indexmap = "2.13.0"
infer = "0.19.0"
is_ci = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2"
machineid-rs = "1.2.4"
mdns-sd = "0.11"
merge = { version = "0.2", features = ["derive"] }
mime_guess = "2"
nom = "8.0.0"
num-format = "0.4"
open = "5.3.2"
regex = "1.12.3"
schemars = "1.2"
similar = { version = "3.0", features = ["inline"] }
strum = "0.28.0"
strum_macros = "0.28.0"
sysinfo = "0.38.3"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.0", features = ["v4", "fast-rng", "serde"] }
whoami = "2.1.0"

# Macros / proc-macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.117", features = ["derive", "parsing"] }

# Test
insta = { version = "1.47.2", features = ["json", "yaml"] }
mockito = "1.7.2"
pretty_assertions = "1.4.1"

# AI / Agent
async-openai = { version = "0.34.0", default-features = false, features = ["response-types"] }
eserde = "0.1.7"
rmcp = { version = "0.10.0", features = ["client", "transport-sse-client-reqwest", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }

# PRISM-exclusive deps
axum = "0.8"
bollard = "0.18"
polars = { version = "0.46", default-features = false, features = ["lazy", "csv", "parquet"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tower = { version = "0.5", features = ["limit", "buffer"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = "8"

# ─────────────────────────────────────────────────────────────────────
# Internal crates — forge_* are Apache-2.0 (vendored from tailcallhq/forgecode)
# ─────────────────────────────────────────────────────────────────────
forge_embed = { path = "crates/forge_embed" }
forge_api = { path = "crates/forge_api" }
forge_app = { path = "crates/forge_app" }
forge_display = { path = "crates/forge_display" }
forge_domain = { path = "crates/forge_domain" }
forge_fs = { path = "crates/forge_fs" }
forge_infra = { path = "crates/forge_infra" }
forge_repo = { path = "crates/forge_repo" }
forge_main = { path = "crates/forge_main" }
forge_services = { path = "crates/forge_services" }
forge_snaps = { path = "crates/forge_snaps" }
forge_spinner = { path = "crates/forge_spinner" }
forge_stream = { path = "crates/forge_stream" }
forge_template = { path = "crates/forge_template" }
forge_tool_macros = { path = "crates/forge_tool_macros" }
forge_tracker = { path = "crates/forge_tracker" }
forge_walker = { path = "crates/forge_walker" }
forge_json_repair = { path = "crates/forge_json_repair" }
forge_select = { path = "crates/forge_select" }
forge_test_kit = { path = "crates/forge_test_kit" }
forge_markdown_stream = { path = "crates/forge_markdown_stream" }
forge_config = { path = "crates/forge_config" }
forge_eventsource = { path = "crates/forge_eventsource" }
forge_eventsource_stream = { path = "crates/forge_eventsource_stream" }
