[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-platform"
version = "2.5.0"
description = "AI-Native Autonomous Materials Discovery Platform"
readme = "README.md"
authors = [{ name = "MARC27", email = "team@marc27.com" }]
license = "LicenseRef-MARC27-Dual"
license-files = ["LICENSE", "LICENSE-MIT", "LICENSE-MARC27"]
maintainers = [
    {name = "PRISM Development Team", email = "team@marc27.com"}
]
keywords = [
    "materials science", "materials discovery", "autonomous agents",
    "OPTIMADE", "CALPHAD", "machine learning", "MCP",
    "scientific computing", "AI", "LLM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "optimade[http-client]>=1.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "google-cloud-aiplatform>=1.0.0",
    "anthropic>=0.20.0",
    "pandas>=2.0.0",
    "tenacity>=8.0.0",
    "requests>=2.28.0",
    "mp-api>=0.45.0",
    "matplotlib>=3.7.0",
    "joblib>=1.3.0",
    "fastmcp>=3.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.4.0",
    "pymatgen>=2024.1.1",
    "matminer>=0.9.0",
    "matplotlib>=3.7.0",
    "pyarrow>=14.0.0",
    "joblib>=1.3.0",
]
simulation = [
    "pyiron-base>=0.9; python_version<'3.14'",
    "pyiron-atomistics>=0.6; python_version<'3.14'",
]
calphad = [
    "pycalphad>=0.10,<0.12; python_version<'3.14'",
]
data = [
    "datasets>=3.0.0",
]
reports = [
    "markdown>=3.5",
    "weasyprint>=60.0",
]
all = [
    "prism-platform[ml,calphad,simulation,data,reports]",
]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.scripts]
prism = "app.cli:cli"

[project.urls]
Homepage = "https://github.com/Darth-Hidious/PRISM"
Repository = "https://github.com/Darth-Hidious/PRISM"
"Bug Reports" = "https://github.com/Darth-Hidious/PRISM/issues"

[tool.setuptools]
packages = ["app", "app.config", "app.db", "app.agent", "app.agent.backends", "app.tools", "app.data", "app.commands", "app.ml", "app.simulation", "app.skills", "app.plugins", "app.validation", "app.cli", "app.cli.tui", "app.cli.slash", "app.search", "app.search.cache", "app.search.providers", "app.search.resilience"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
