[package]
name = "prism-agent"
version = "2.6.1"
edition.workspace = true

[dependencies]
prism-ingest = { path = "../ingest" }
prism-llm = { path = "../llm" }
prism-node = { path = "../node" }
prism-policy = { path = "../policy" }
prism-python-bridge = { path = "../python-bridge" }
prism-client = { path = "../client" }
prism-runtime = { path = "../runtime" }
prism-workflows = { path = "../workflows" }
prism-provenance = { path = "../provenance" }
prism-embed = { path = "../embed" }
prism-campaign = { path = "../campaign" }

regex = "1"
rmcp = { workspace = true }
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["io-util", "io-std", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true
dirs = "6"
chrono.workspace = true
directories.workspace = true
shlex = "1"

[target.'cfg(unix)'.dependencies]
# killpg() to reap a wedged notebook kernel's whole process group.
libc.workspace = true

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
# For the HTTP chat parity/approval integration tests (tests/http_chat_parity.rs):
# stub OpenAI-compatible LLM server + direct use of the loop's own types.
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
prism-ingest = { path = "../ingest" }
prism-python-bridge = { path = "../python-bridge" }
