[package]
name = "prism-client"
description = "Typed HTTP client for the MARC27 platform API — device-flow auth, marketplace, and node registry."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"
