[package]
name = "prism-compute"
description = "Compute backend abstraction — routes jobs to local Docker/Podman, MARC27 cloud, or BYOC targets."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
