[package]
name = "forge_tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# PRISM fork: PostHog telemetry stripped. This crate now provides a
# no-op Tracker plus file-based tracing so existing forge_main call
# sites keep compiling without sending any data off the machine.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bstr.workspace = true
chrono.workspace = true
convert_case.workspace = true
forge_domain.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
pretty_assertions.workspace = true
