[package]
name = "prism-ingest"
description = "Data ingestion and ontology pipeline — LLM-driven entity extraction, Neo4j graphs, and Qdrant embeddings."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
polars = { workspace = true }
prism-llm = { path = "../llm" }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
