[package]
name = "prism-llm"
description = "LLM client — OpenAI-compatible + MARC27 platform proxy, tool calling, streaming."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
