[package]
name = "prism-mesh"
description = "Node discovery and data federation — mDNS, platform-mediated cross-org, and pub/sub subscriptions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
mdns-sd = { workspace = true }
rdkafka = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

prism-client = { path = "../client" }

[dev-dependencies]
tempfile = "3"
