[package]
name = "prism-mesh"
description = "Node discovery and data federation — mDNS, platform-mediated cross-org, and pub/sub subscriptions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
mdns-sd = { workspace = true }
rdkafka = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

prism-client = { path = "../client" }
prism-proto = { path = "../proto" }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3"
