[package]
name = "prism-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

prism-proto = { path = "../proto" }
prism-runtime = { path = "../runtime" }

